--- a/nodejs-helloworld/package.json
+++ b/nodejs-helloworld/package.json
@@ -11,5 +11,5 @@
   "description": "Hello World!",
   "main": "app.js",
   "scripts": { "start": "node app.js" },
-  "author": "Red{nbsp}Hat Training",
+  "author": "Red{nbsp}Hat Training"
 }
